hphp/hack/test/typecheck/namespace_empty_identifier2.php.exp
File "namespace_empty_identifier2.php", line 4, characters 14-15:
Unbound name:  (an object type) (Naming[2049])
