hphp/hack/test/typecheck/namespace_empty_identifier2.php
<?hh //strict

function test($x) {
  class_meth('', 'f');
}
